add if condition to video load

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+    <!-- <h1 id='test_h1'>TEST</h1> -->
     <div class="nav">
         <img class="logo" src="logo.png">
         <div class="name-link">
